@@ -2,8 +2,8 @@
  * @test /nodynamiccopyright/
  * @bug 8316971
  * @summary Smoke test for restricted method call warnings
- * @compile/fail/ref=RestrictedMethods.out -Xlint:restricted -Werror -XDrawDiagnostics --enable-preview --source ${jdk.version} RestrictedMethods.java
- * @compile -Werror --enable-preview --source ${jdk.version} RestrictedMethods.java
+ * @compile/fail/ref=RestrictedMethods.out -Xlint:restricted -Werror -XDrawDiagnostics RestrictedMethods.java
+ * @compile -Werror RestrictedMethods.java
  */
 
 import java.lang.foreign.MemorySegment;
